Updating and making my site cool :)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
+<!-- This is home :) -->
+
 <!doctype html>
 <html lang="en">
 	<head>
