--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -18,3 +18,5 @@ const { Content } = await post.render();
 <BlogPost {...post.data}>
 	<Content />
 </BlogPost>
+
+<!-- I'm just reading the code to understand it. -->
